--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="stylesheet" href="/styles/mediaqueries.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/mediaqueries.css" />
   </head>
   <body>
     <nav id="desktop-nav">
@@ -15,7 +15,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
-          <li><a href="/public/projects.html">Projects</a></li>
+          <li><a href="./public/projects.html">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -31,7 +31,7 @@
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="/public/projects.html" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="./public/projects.html" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -39,7 +39,7 @@
     <section id="profile">
       <div class="section__pic-container">
         <img
-          src="/assets/Profile Pic.jpg"
+          src="./assets/Profile Pic.jpg"
           alt="Evelio Culin profile picture"
           class="Circular"
         />
@@ -61,7 +61,7 @@
         </div>
         <div id="socials-container">
           <img
-            src="/assets/social-linkedin.256x256.png"
+            src="./assets/social-linkedin.256x256.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="
@@ -70,7 +70,7 @@
             "
           />
           <img
-            src="/assets/github-square.256x256.png"
+            src="./assets/github-square.256x256.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href = 'https://github.com/KoroLog'"
@@ -78,6 +78,6 @@
         </div>
       </div>
     </section>
-    <script src="/scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
