--- a/public/projects.html
+++ b/public/projects.html
@@ -5,18 +5,18 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Projects • My Portfolio</title>
-		<link rel="stylesheet" href="/styles/style.css" />
-		<link rel="stylesheet" href="/styles/mediaqueries.css" />
+		<link rel="stylesheet" href="./styles/style.css" />
+		<link rel="stylesheet" href="./styles/mediaqueries.css" />
 	</head>
 	<body>
 		<nav id="desktop-nav">
 			<div class="logo">Evelio Culin</div>
 			<div>
 				<ul class="nav-links">
-					<li><a href="/public/index.html#about">About</a></li>
-					<li><a href="/public/index.html#experience">Experience</a></li>
-					<li><a href="/public/projects.html">Projects</a></li>
-					<li><a href="/public/index.html#contact">Contact</a></li>
+					<li><a href="./public/index.html#about">About</a></li>
+					<li><a href="./public/index.html#experience">Experience</a></li>
+					<li><a href="./public/projects.html">Projects</a></li>
+					<li><a href="./public/index.html#contact">Contact</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -29,10 +29,10 @@
 					<span></span>
 				</div>
 				<div class="menu-links">
-					<li><a href="/public/index.html#about" onclick="toggleMenu()">About</a></li>
-					<li><a href="/public/index.html#experience" onclick="toggleMenu()">Experience</a></li>
-					<li><a href="/public/projects.html" onclick="toggleMenu()">Projects</a></li>
-					<li><a href="/public/index.html#contact" onclick="toggleMenu()">Contact</a></li>
+					<li><a href="./public/index.html#about" onclick="toggleMenu()">About</a></li>
+					<li><a href="./public/index.html#experience" onclick="toggleMenu()">Experience</a></li>
+					<li><a href="./public/projects.html" onclick="toggleMenu()">Projects</a></li>
+					<li><a href="./public/index.html#contact" onclick="toggleMenu()">Contact</a></li>
 				</div>
 			</div>
 		</nav>
@@ -47,7 +47,7 @@
 					<h3>Uso de Three.js</h3>
 					<p style="margin-bottom:0.75rem;">Vista de un cubo de Rubik interactivo.</p>
 					<div class="project-embed">
-						<iframe src="/public/demos/CuboRubik.html" title="Embedded Demo"></iframe>
+						<iframe src="./public/demos/CuboRubik.html" title="Embedded Demo"></iframe>
 					</div>
 					<div class="btn-container" style="margin-top:0.75rem;">
 						<button class="btn btn-color-2" onclick="window.open('/public/demos/CuboRubik.html')">Abrir demo</button>
@@ -74,6 +74,6 @@
 			</div>
 		</section>
 
-		<script src="/scripts/script.js"></script>
+		<script src="./scripts/script.js"></script>
 	</body>
 	</html>
