--- a/public/projects.html
+++ b/public/projects.html
@@ -67,14 +67,14 @@
           </p>
           <div class="project-embed">
             <iframe
-              src="./public/demos/CuboRubik.html"
+              src="/public/demos/CuboRubik.html"
               title="Embedded Demo"
             ></iframe>
           </div>
           <div class="btn-container" style="margin-top: 0.75rem">
             <button
               class="btn btn-color-2"
-              onclick="window.open('./public/demos/CuboRubik.html')"
+              onclick="window.open('/public/demos/CuboRubik.html')"
             >
               Abrir demo
             </button>
