--- a/public/projects.html
+++ b/public/projects.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects • My Portfolio</title>
-    <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="stylesheet" href="/styles/mediaqueries.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../styles/mediaqueries.css" />
   </head>
   <body>
     <nav id="desktop-nav">
       <div class="logo">Evelio Culin</div>
       <div>
         <ul class="nav-links">
-          <li><a href="/index.html#about">About</a></li>
-          <li><a href="/index.html#experience">Experience</a></li>
-          <li><a href="/public/projects.html">Projects</a></li>
-          <li><a href="/index.html#contact">Contact</a></li>
+          <li><a href="../index.html#about">About</a></li>
+          <li><a href="../index.html#experience">Experience</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="../index.html#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -30,18 +30,18 @@
         </div>
         <div class="menu-links">
           <li>
-            <a href="/index.html#about" onclick="toggleMenu()">About</a>
+            <a href="../index.html#about" onclick="toggleMenu()">About</a>
           </li>
           <li>
-            <a href="/index.html#experience" onclick="toggleMenu()"
+            <a href="../index.html#experience" onclick="toggleMenu()"
               >Experience</a
             >
           </li>
           <li>
-            <a href="/public/projects.html" onclick="toggleMenu()">Projects</a>
+            <a href="projects.html" onclick="toggleMenu()">Projects</a>
           </li>
           <li>
-            <a href="/index.html#contact" onclick="toggleMenu()"
+            <a href="../index.html#contact" onclick="toggleMenu()"
               >Contact</a
             >
           </li>
@@ -67,14 +67,14 @@
           </p>
           <div class="project-embed">
             <iframe
-              src="/public/demos/CuboRubik.html"
+              src="demos/CuboRubik.html"
               title="Embedded Demo"
             ></iframe>
           </div>
           <div class="btn-container" style="margin-top: 0.75rem">
             <button
               class="btn btn-color-2"
-              onclick="window.open('/public/demos/CuboRubik.html')"
+              onclick="window.open('demos/CuboRubik.html')"
             >
               Abrir demo
             </button>
@@ -113,6 +113,6 @@
       </div>
     </section>
 
-    <script src="./scripts/script.js"></script>
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
