--- a/public/projects.html
+++ b/public/projects.html
@@ -74,7 +74,7 @@
           <div class="btn-container" style="margin-top: 0.75rem">
             <button
               class="btn btn-color-2"
-              onclick="window.open('./demos/CuboRubik.html')"
+              onclick="window.open('./public/demos/CuboRubik.html')"
             >
               Abrir demo
             </button>
