Fix GitHub link and update project description in projects.html

--- a/public/projects.html
+++ b/public/projects.html
@@ -88,7 +88,7 @@
           <div class="btn-container">
             <button
               class="btn btn-color-1"
-              onclick="location.href = 'https://github.com/Koronne'"
+              onclick="location.href = 'https://github.com/KoroLog'"
             >
               Ver GitHub
             </button>
@@ -99,7 +99,7 @@
         <article class="project-card">
           <h3>Proyecto Destacado</h3>
           <p style="margin-bottom: 0.75rem">
-            Descripción breve del proyecto. Reemplaza con tu contenido.
+            Descripción breve del proyecto.
           </p>
           <div class="btn-container">
             <button
