Add 3D Car Model demo and embed in projects page

--- a/public/projects.html
+++ b/public/projects.html
@@ -81,6 +81,24 @@
           </div>
         </article>
 
+        <article class="project-card">
+          <h3>Modelo de Carro 3D</h3>
+          <p style="margin-bottom: 0.75rem">
+            Vista de un carro 3D interactivo.
+          </p>
+          <div class="project-embed">
+            <iframe src="demos/Carro.html" title="Carro 3D"></iframe>
+          </div>
+          <div class="btn-container" style="margin-top: 0.75rem">
+            <button
+              class="btn btn-color-2"
+              onclick="window.open('demos/Carro.html', '_blank')"
+            >
+              Abrir demo
+            </button>
+          </div>
+        </article>
+
         <!-- External project link -->
         <article class="project-card">
           <h3>GitHub Portfolio</h3>
