Add 3D Avocado and Camera models with interactive demos to projects page

--- a/public/projects.html
+++ b/public/projects.html
@@ -99,6 +99,42 @@
           </div>
         </article>
 
+        <article class="project-card">
+          <h3>Modelo de Aguacate 3D</h3>
+          <p style="margin-bottom: 0.75rem">
+            Vista de un aguacate 3D interactivo.
+          </p>
+          <div class="project-embed">
+            <iframe src="demos/Aguacate.html" title="Aguacate 3D"></iframe>
+          </div>
+          <div class="btn-container" style="margin-top: 0.75rem">
+            <button
+              class="btn btn-color-2"
+              onclick="window.open('demos/Aguacate.html', '_blank')"
+            >
+              Abrir demo
+            </button>
+          </div>
+        </article>
+
+        <article class="project-card">
+          <h3>Modelo de Cámara 3D</h3>
+          <p style="margin-bottom: 0.75rem">
+            Vista de una cámara 3D interactiva.
+          </p>
+          <div class="project-embed">
+            <iframe src="demos/Camara.html" title="Cámara 3D"></iframe>
+          </div>
+          <div class="btn-container" style="margin-top: 0.75rem">
+            <button
+              class="btn btn-color-2"
+              onclick="window.open('demos/Camara.html', '_blank')"
+            >
+              Abrir demo
+            </button>
+          </div>
+        </article>
+
         <!-- External project link -->
         <article class="project-card">
           <h3>GitHub Portfolio</h3>
